MEFA VERSIONS


Version 2.0-1 -- September 29, 2008 (opened - r???)

    * extract.mefa: column extraction bug fixed
    * type arg of plot.mefa: "hist" replaced by "bar"


Version 2.0-0 -- September 29, 2008 (closed - r200)

    * The package was extensively rewritten
      (started on September 16, 2008).
      It is more easy and efficient than
      < 2.0 versions. The number of object
      classes reduced. The new class stcs
      is almost equivalent to the old sscount.
      The new class mefa can be used either
      as the old xcount and mefa classes
      (and the xclist and mflist classes
      only provided with the undocumented
      patch file). The old xorder class
      is bow useless, too.
    * New methods are provided for manipulating
      pbjects. The "[.mefa" replaces the old
      exclmf function, the aggregate method
      replaces the old strify function.
    * plot, print and summary methods only
      provided for the class mefa. For the
      stcs class, methods for data frames can
      be used (because an stcs object is
      essentially a data frame with some
      conventions and additional attributes).
    * The melt method is provided to convert
      a mefa object into stcs, or redefine
      new segments.
    * dim and dimnames methods also available
      for mefa objects.
    * the mefalogo function depicts the
      general representation of an object
      of class mefa.


Version 1.1-4 -- September 20, 2008 (closed)

    * inflate: arguments of any() corrected


Version 1.1-3 -- September 15, 2008 (closed)

    * citation entry added


Version 1.1-2 -- June 24, 2008 (closed)

    * several minor fixes in .Rd files
    * xytrend moved to sedar
    * preliminary modifications made according to later
      introduction of 'list' objects
    * report as generic function added for methods
    * as.mefa added
    * startup message is added


Version 1.1-1 -- June 12, 2008 (closed)
                 April 02, 2008 (started)
